test_suite5/ALAN/test_suite/alan-2022-examples/failing/005720_mutation.alan
source Ie34 begin leave 009 - 6709 < end
